--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "inf3190-tp3",
   "version": "1.0.0",
+  "private": "true",
+  "repository": "https://github.com/Nami-R2301/INF3190_A2020.git",
   "dependencies": {
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.2"
